--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <script src="https://use.fontawesome.com/f39dbc59ba.js"></script>
     <script src="assets/js/lib/jquery-3.1.1.min.js" charset="utf-8"></script>
   </head>
   <body>
     <div id="container">
-      <h1>to-do list</h1>
+      <h1>to-do list <i class="fa fa-plus" aria-hidden="true"></i></h1>
       <input type="text" placeholder="Add New Todo">
       <ul>
-        <li><span class="delete">X</span> Coffee</li>
-        <li><span>X</span> Bananas</li>
-        <li><span>X</span> Nutella</li>
+        <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Coffee</li>
+        <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Bananas</li>
+        <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Nutella</li>
       </ul>
     </div>
 
