Added Navbar, WIP

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <script src="assets/js/lib/jquery-3.1.1.min.js" charset="utf-8"></script>
   </head>
   <body>
+    <div id="navbar">
+      <ul>
+        <li style="float: right;"><a href="#">Login</a></li>
+        <li style="float: right;"><a href="#">Register</a></li>
+        <li><a href="index.html" id="logo">TO-DO LIST</a></li>
+      </ul>
+    </div>
     <div id="container">
       <h1>to-do list <i class="fa fa-plus" aria-hidden="true"></i></h1>
       <input type="text" placeholder="Add New Todo">
